// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBox component should match snapshot 1`] = `
<section
  className="InfoBox"
>
  <h3>
    Elizabeth Gaskell's Home
  </h3>
  <p>
    Manchester
  </p>
  <menu
    className="menu"
  >
    <div
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-heart menuIcon"
        data-icon="heart"
        data-prefix="fas"
        focusable="false"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="img"
        style={
          Object {
            "color": "gray",
            "transition": "color 1s ease",
          }
        }
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="close"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-xmark menuIcon"
        data-icon="xmark"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </menu>
  <div
    className="infoBoxLayout"
  >
    <div
      className="infoBoxText"
    >
      <p>
        Gaskell's historic home was restored in 2014. It is now a museum to the author and her times.
      </p>
      <p>
        <span>
          Author(s):
        </span>
         
        Elizabeth Gaskell
      </p>
      <p>
        <span>
          Literary work(s):
        </span>
         
        Mary Barton, North and South, Cranford, Wives and Daughters
      </p>
    </div>
  </div>
</section>
`;

exports[`InfoBox component should match snapshot WITH Photo 1`] = `
<section
  className="InfoBox"
>
  <h3>
    Brontë Country
  </h3>
  <p>
    Haworth, West Yorkshire
  </p>
  <menu
    className="menu"
  >
    <div
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-heart menuIcon"
        data-icon="heart"
        data-prefix="fas"
        focusable="false"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="img"
        style={
          Object {
            "color": "gray",
            "transition": "color 1s ease",
          }
        }
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="close"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-xmark menuIcon"
        data-icon="xmark"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </menu>
  <div
    className="infoBoxLayout"
  >
    <div
      className="infoBoxImg"
    >
      <img
        alt="Brontë Country"
        src="img/brontes.png"
      />
    </div>
    <div
      className="infoBoxText"
    >
      <p>
        Among the most famous literary families the Brontë sisters wrote some of the most beloved works in literature. The parsonage where they lived with their father and brother is now a museum. The family, with the exception of Anne is buried in the church's vault. The Brontë Waterfall nearby was a favorite site of the sisters.
      </p>
      <p>
        <span>
          Author(s):
        </span>
         
        Emily, Charlotte and Anne Brontë
      </p>
      <p>
        <span>
          Literary work(s):
        </span>
         
        Jane Eyre, Wuthering Heights ...
      </p>
    </div>
  </div>
</section>
`;
